# jni_scala_test

./: .bazelrc  WORKSPACE.bazel  dependencies.yaml
src/scala/com/mediarithmics/lib/v8/: BUILD.bazel  V8JavaTest.java  V8Main.scala  V8Test.scala
